@@ -57,6 +57,7 @@ tgtlibs_evrbld += pdsapp/configdb qt/QtGui qt/QtCore
 tgtlibs_evrbld += pdsdata/xampsdata pdsdata/fexampdata pdsdata/cspaddata pdsdata/lusidata
 tgtlibs_evrbld += pdsdata/encoderdata pdsdata/ipimbdata pdsdata/princetondata pdsdata/controldata
 tgtlibs_evrbld += pdsdata/acqdata pdsdata/pnccddata pdsdata/gsc16aidata
+tgtlibs_evrbld += pdsdata/timepixdata
 tgtlibs_evrbld += evgr/evr evgr/evg
 tgtlibs_evrbld += pds/evgr
 tgtincs_evrbld := evgr
@@ -67,6 +68,7 @@ tgtlibs_pimbld += pdsapp/configdb qt/QtGui qt/QtCore
 tgtlibs_pimbld += pdsdata/xampsdata pdsdata/fexampdata pdsdata/cspaddata pdsdata/lusidata
 tgtlibs_pimbld += pdsdata/encoderdata pdsdata/ipimbdata pdsdata/princetondata pdsdata/controldata
 tgtlibs_pimbld += pdsdata/acqdata pdsdata/pnccddata pdsdata/gsc16aidata
+tgtlibs_pimbld += pdsdata/timepixdata
 tgtlibs_pimbld += pds/camera
 tgtlibs_pimbld += $(leutron_libs)
 tgtincs_pimbld := leutron/include
