@@ -19,6 +19,7 @@
 #include "pds/config/XampsConfigType.hh"
 #include "pds/config/FexampConfigType.hh"
 #include "pds/config/Gsc16aiConfigType.hh"
+#include "pds/config/TimepixConfigType.hh"
 //#include "pds/config/SeqConfigType.hh"
 
 #include <sstream>
@@ -71,6 +72,7 @@ const Pds::TypeId* PdsDefs::typeId(ConfigType id)
   case Xamps        : type = &_XampsConfigType;     break;
   case Fexamp       : type = &_FexampConfigType;    break;
   case Gsc16ai      : type = &_gsc16aiConfigType;   break;
+  case Timepix      : type = &_timepixConfigType;   break;
   default: 
     printf("PdsDefs::typeId id %d not found\n",unsigned(id));
     break;
@@ -102,6 +104,7 @@ const Pds::TypeId* PdsDefs::typeId(const UTypeName& name)
   test(_XampsConfigType);
   test(_FexampConfigType);
   test(_gsc16aiConfigType);
+  test(_timepixConfigType);
 #undef test
   //  database-only types
   //  if (name==_eventCodeSetName) return &_eventCodeSetType;
@@ -134,6 +137,7 @@ const Pds::TypeId* PdsDefs::typeId(const QTypeName& name)
   test(_XampsConfigType);
   test(_FexampConfigType);
   test(_gsc16aiConfigType);
+  test(_timepixConfigType);
 #undef test
   //  database-only types
   //  if (name==_eventCodeSetName) return &_eventCodeSetType;
