@@ -34,6 +34,7 @@
 #include "pdsapp/config/XampsConfig.hh"
 #include "pdsapp/config/FexampConfig.hh"
 #include "pdsapp/config/Gsc16aiConfig.hh"
+#include "pdsapp/config/TimepixConfig.hh"
 
 #include "pds/config/EvrConfigType.hh"
 #include "pds/config/EvrIOConfigType.hh"
@@ -54,6 +55,7 @@
 #include "pds/config/XampsConfigType.hh"
 #include "pds/config/FexampConfigType.hh"
 #include "pds/config/Gsc16aiConfigType.hh"
+#include "pds/config/TimepixConfigType.hh"
 #include "pdsapp/config/PdsDefs.hh"
 
 #include "pdsdata/lusi/DiodeFexConfigV1.hh"
@@ -96,6 +98,7 @@ SerializerDictionary::SerializerDictionary()
   enroll(_XampsConfigType     ,new XampsConfig);
   enroll(_FexampConfigType    ,new FexampConfig);
   enroll(_gsc16aiConfigType   ,new Gsc16aiConfig);
+  enroll(_timepixConfigType   ,new TimepixConfig);
   //  retired
   enroll(Pds::TypeId(Pds::TypeId::Id_CspadConfig,2) , new CspadConfig_V2);
   enroll(Pds::TypeId(Pds::TypeId::Id_CspadConfig,1) , new CspadConfig_V1);  
