@@ -27,6 +27,7 @@ tgtsrcs_control_gui += PVControl.cc
 #tgtsrcs_control_gui += EpicsCA.cc
 tgtsrcs_control_gui += EventSequencer.cc
 tgtlibs_control_gui := pdsdata/xtcdata pdsdata/opal1kdata pdsdata/pulnixdata pdsdata/camdata pdsdata/pnccddata pdsdata/evrdata pdsdata/acqdata pdsdata/controldata pdsdata/princetondata pdsdata/ipimbdata pdsdata/encoderdata pdsdata/fccddata pdsdata/lusidata pdsdata/cspaddata pdsdata/xampsdata pdsdata/fexampdata pdsdata/gsc16aidata
+tgtlibs_control_gui += pdsdata/timepixdata
 tgtlibs_control_gui += pds/service pds/collection pds/xtc pds/mon pds/vmon pds/utility pds/client pds/offlineclient pds/config pds/management pds/epicstools
 tgtlibs_control_gui += pds/epicstools
 tgtlibs_control_gui += pdsapp/configdb
